# football_everywhere_backend

./: .gitignore  CLAUDE.md  commit_log.md  lauch_all.sh
ComfyUI/: nodes.py  pyproject.toml
ComfyUI/custom_nodes/ComfyUI-3D-Convert/: README.md  __init__.py  pyproject.toml
ComfyUI/custom_nodes/ComfyUI-3D-Convert/util/: nsdt.py
ComfyUI/custom_nodes/ComfyUI-Hunyuan3DWrapper/: nodes.py
ComfyUI/custom_nodes/ComfyUI-Hunyuan3DWrapper/hy3dgen/shapegen/: pipelines.py
ComfyUI/custom_nodes/ComfyUI-Hunyuan3DWrapper/hy3dgen/shapegen/models/: __init__.py
ComfyUI/custom_nodes/ComfyUI-Hunyuan3DWrapper/hy3dgen/texgen/custom_rasterizer/custom_rasterizer.egg-info/: PKG-INFO
ComfyUI/custom_nodes/ComfyUI-IG2MV/: README.md  __init__.py  attention_processor.py  nodes.py  pyproject.toml  utils.py
ComfyUI/custom_nodes/ComfyUI-IG2MV/.github/workflows/: publish_action.yml
ComfyUI/custom_nodes/ComfyUI-IG2MV/example_workflows/: hnz_IG2MV.json  hnz_IG2MV_12.json
ComfyUI/custom_nodes/ComfyUI-MVAdapter/: README.md  nodes.py  pyproject.toml  utils.py
ComfyUI/custom_nodes/ComfyUI-MVAdapter/.github/workflows/: publish.yml
ComfyUI/custom_nodes/ComfyUI-MVAdapter/mvadapter/pipelines/: pipeline_mvadapter_i2mv_sd.py  pipeline_mvadapter_i2mv_sdxl.py
ComfyUI/custom_nodes/ComfyUI-MVAdapter/workflows/: i2mv_sdxl_diffusers.json  i2mv_sdxl_ldm.json  i2mv_sdxl_ldm_lora.json  i2mv_sdxl_ldm_multiple_loras.json  i2mv_sdxl_ldm_view_selector.json  t2mv_sdxl_diffusers.json  t2mv_sdxl_ldm.json  t2mv_sdxl_ldm_controlnet.json  t2mv_sdxl_ldm_lora.json  t2mv_sdxl_ldm_multiple_loras.json
ComfyUI/custom_nodes/Make-It-Animatable/: __init__.py
ComfyUI/custom_nodes/comfyui-easy-use/: .tracking
ComfyUI/custom_nodes/comfyui-easy-use/wildcards/: example.txt
ComfyUI/custom_nodes/comfyui-videonoisewarp/: .tracking  nodes.py  pyproject.toml  readme.md
ComfyUI/custom_nodes/comfyui-videonoisewarp/noisewarp/: raft.py
Make-It-Animatable/: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  README_COMFYUI.md  app.py  app_blender.py  comfyui_node.py  engine.py  main.py  model.py  models_ae.py  pyproject.toml  requirements.txt  rigging_sample.json  setup_api.py  test.py  test_core.py  test_import.py  train.py  train.sh
Make-It-Animatable/api_server/: README.md  main.py  requirements_api.txt
Make-It-Animatable/util/: blender_utils.py  dataset_mixamo.py  dataset_mixamo_additional.py  misc.py  utils.py
Make-It-Animatable/util/auto_rig_pro/: 00_LOG.txt  __init__.py
Make-It-Animatable/util/auto_rig_pro/src/: auto_rig_ge.py  auto_rig_remap.py
workflow_api/: README.md  api_server.py  api_spec.md  api_usage_memo.md  check_new_job.py  check_results_files.py  comfyui_client.py  debug_api_server.py  debug_comfyui_direct.py  debug_comfyui_history.py  debug_job_data.py  debug_job_status.py  example_minimal_response.json  example_usage.py  investigate_slow_response.py  pyproject.toml  requirements.txt  start_api.sh  test_complete_api.py  test_direct_results.py  test_existing_job.py  test_fbx_only.py  test_fbx_workaround.py  test_file_extraction.py  test_file_processing.py  test_fixed_api.py  test_minimal_status.py  test_results_extraction.py  test_status_performance.py  workflow_analysis.md
