[project]
name = "ComfyUI"
version = "0.3.46"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "chardet>=5.2.0",
    "clip-interrogator>=0.6.0",
    "color-matcher>=0.6.0",
    "colour-science>=0.4.6",
    "diffusers>=0.31.0",
    "einops>=0.8.1",
    "gitpython>=3.1.45",
    "gradio>=5.39.0",
    "groundingdino-py>=0.4.0",
    "huggingface-hub>=0.34.3",
    "lark>=1.2.2",
    "matrix-nio>=0.25.2",
    "mss>=10.0.0",
    "numba>=0.61.2",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "peft>=0.17.0",
    "pip>=25.1.1",
    "pixeloe>=0.1.4",
    "plyfile>=1.1.2",
    "potpourri3d>=1.3",
    "pybind11>=3.0.0",
    "pygithub>=2.7.0",
    "pygltflib>=1.16.5",
    "pymcubes>=0.1.6",
    "pymeshlab<2025.0",
    "rembg>=2.0.67",
    "rich>=14.1.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "segment-anything>=1.0",
    "sentencepiece>=0.2.0",
    "shapely>=2.1.1",
    "spandrel>=0.4.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "toml>=0.10.2",
    "torchsde>=0.2.6",
    "transformers>=4.54.1",
    "transparent-background>=1.3.4",
    "trimesh>=4.7.1",
    "typer>=0.16.0",
    "typing-extensions>=4.14.1",
    "xatlas>=0.0.11",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]

[tool.uv.workspace]
# members = [
#     "custom_nodes/Make-It-Animatable",
# ]
